# inferno

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  deny.toml  devenv.nix  lefthook.yml  mise.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  nightly.yml
cli/: Cargo.toml  build.rs
cli/src/: bench.rs  compile.rs  diff.rs  inspect.rs  llama_bench.rs  main.rs  profile.rs  run.rs
cli/src/snapshots/: inferno__bench__tests__bench_report_table.snap
cli/tests/: bench.rs  inspect.rs  run.rs
cli/tests/fixtures/: llama-bench.json
cli/tests/snapshots/: inspect__inspect_gguf.snap
crates/inferno-codegen/: Cargo.toml  build.rs
crates/inferno-codegen/src/: emit.rs  error.rs  lib.rs  loopir.rs  profile.rs
crates/inferno-codegen/src/llvm/: attn_emit.rs  mod.rs  ops.rs
crates/inferno-codegen/src/snapshots/: inferno_codegen__loopir__tests__loopir_dump_gguf.snap
crates/inferno-codegen/tests/: attn_emit.rs  differential.rs
crates/inferno-core/: Cargo.toml  build.rs
crates/inferno-core/src/: artifact.rs  backend.rs  cache.rs  error.rs  lib.rs
crates/inferno-core/tests/: artifact.rs  backend.rs
crates/inferno-formats/: Cargo.toml
crates/inferno-formats/examples/: gen_fixtures.rs
crates/inferno-formats/src/: data.rs  desc.rs  error.rs  fixtures.rs  lib.rs  limits.rs  mlx.rs  names.rs  quant.rs  read.rs  safetensors.rs
crates/inferno-formats/tests/: snapshot_desc.rs
crates/inferno-graph/: Cargo.toml
crates/inferno-graph/src/: build.rs  error.rs  interp.rs  ir.rs  lib.rs  ops.rs  tolerance.rs
crates/inferno-graph/tests/: differential.rs  quant_roundtrip.rs  snapshot_ir.rs
crates/inferno-graph/tests/snapshots/: snapshot_ir__tiny_gguf_ir.snap  snapshot_ir__tiny_mlx_ir.snap
crates/inferno-kernels/: Cargo.toml
crates/inferno-kernels/benches/: attention.rs  attn_decode_phases.rs  gemv.rs
crates/inferno-kernels/src/: act.rs  attention.rs  buf.rs  error.rs  expf.rs  f32k.rs  lib.rs  pf.rs  q4_k.rs  q8_0.rs  registry.rs
crates/inferno-kernels/tests/: rig.proptest-regressions  rig.rs
crates/inferno-plan/: Cargo.toml
crates/inferno-plan/src/: error.rs  island.rs  kv.rs  lib.rs  memory.rs  plan.rs  weights.rs
crates/inferno-plan/src/snapshots/: inferno_plan__plan__tests__plan_dump_gguf.snap
crates/inferno-pool/: Cargo.toml
crates/inferno-pool/examples/: bw_curve.rs  gemv_stream.rs
crates/inferno-pool/src/: error.rs  lib.rs  pool.rs  probe.rs  prof.rs  shard.rs
crates/inferno-pool/tests/: dispatch_race.rs  fallback.rs  global.rs  par_attention_fallback.rs  par_attention_heads_fallback.rs  par_rig.rs  par_token_loop_fallback.rs
crates/inferno-runtime/: Cargo.toml
crates/inferno-runtime/src/: backend.rs  diff.rs  error.rs  generate.rs  lib.rs  rng.rs  sampler.rs
crates/inferno-runtime/src/tokenizer/: bpe.rs  bytes.rs  hf.rs  mod.rs  spm.rs
crates/inferno-runtime/tests/: end_to_end.rs  teacher_forced.rs  tokenizer_equivalence.rs
crates/inferno-target/: Cargo.toml
crates/inferno-target/examples/: print_target.rs
crates/inferno-target/profiles/: ryzen-3900.toml
crates/inferno-target/src/: desc.rs  detect.rs  detect_macos.rs  error.rs  lib.rs  profile.rs
crates/inferno-target/tests/fixtures/sys-cpu-ryzen-3900/cpu0/cache/index3/: shared_cpu_list
docs/: threat-model.md
docs/runbooks/: metal.md  quiet-hw-verification.md
docs/superpowers/plans/: 2026-07-04-m0-skeleton-formats.md  2026-07-05-m1-graph-interpreter.md  2026-07-05-m2-targets-kernels.md  2026-07-05-m3-compiler.md  2026-07-06-m4a-bench-sampling.md  2026-07-06-m4b1-threading.md  2026-07-07-m4b2-per-thread-gap.md  2026-07-07-m4b3-vectorized-attention.md  2026-07-08-m4b4-decode-gemv-mlp.md  2026-07-08-m4b5-phase-aware-decode-threading.md  2026-07-09-m4b6-decode-gemv-op-reduction.md  2026-07-09-m4b6-reduce-unpack-restructure.md  2026-07-09-m4b7-quiet-hw-verification.md  2026-07-10-phoenixnap-bench-infra.md  2026-07-11-m4b8-parallel-attention.md  2026-07-12-m4b10-decode-cap-formula.md  2026-07-12-m4b9-serial-tail-parallelization.md  2026-07-16-m4b11-decode-attention-parallelism.md  2026-07-16-m4b12-decode-attention-headroom-attribution.md  2026-07-17-m4b13-prefill-gemm-register-tiles-vnni.md  2026-07-17-m4b14-prefill-attention-query-blocking.md  2026-07-17-m4b15-decode-attention-kernel.md  2026-07-18-m4b16-emitted-decode-attention.md  2026-07-18-m4b17-decode-gemv-stream-rate.md  2026-07-18-v1-close.md  2026-07-19-m5-apple-silicon-neon-baseline.md
docs/superpowers/specs/: 2026-07-04-inferno-v1-design.md  2026-07-05-m1-graph-interpreter-design.md  2026-07-05-m2-targets-kernels-design.md  2026-07-05-m3-compiler-design.md  2026-07-06-m4a-bench-sampling-design.md  2026-07-06-m4b1-threading-design.md  2026-07-07-m4b2-per-thread-gap-design.md  2026-07-07-m4b3-vectorized-attention-design.md  2026-07-08-m4b4-decode-gemv-mlp-design.md  2026-07-08-m4b5-phase-aware-decode-threading-design.md  2026-07-09-m4b6-decode-gemv-op-reduction-design.md  2026-07-09-m4b7-quiet-hw-verification-design.md  2026-07-10-phoenixnap-bench-infra-design.md  2026-07-11-m4b8-parallel-attention-design.md  2026-07-12-m4b10-decode-cap-formula-design.md  2026-07-12-m4b9-serial-tail-parallelization-design.md  2026-07-16-m4b11-decode-attention-f16kv-design.md  2026-07-16-m4b12-decode-attention-headroom-attribution-design.md  (+7 more)
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/safetensors_parse/: tiny.safetensors
fuzz/fuzz_targets/: gguf_parse.rs  safetensors_parse.rs
scripts/: fetch-qwen-gguf.sh  nightly-differential.sh  nightly-speedup.sh  semgrep.sh
scripts/metal/: catalog.sh  cpu-features.json  gc.sh  host-prep.sh  lib-selftest.sh  lib.sh  probe.sh  record-fixtures.sh  run.sh
scripts/quiet-hw/: gate-attn-perf.sh  gate-attn-perturb.sh  gate-attn-split.sh  gate-bench-protocol.sh  gate-bw-curve.sh  gate-decode-attr.sh  gate-decode-cap.sh  gate-decode-kernel-ubench.sh  gate-emitted-attn.sh  gate-gemv-stream.sh  gate-intel-ab.sh  gate-pf-dist.sh  gate-prefill-attn-split.sh  gate-prefill-attr.sh  gate-prefill-scaling.sh  lib-selftest.sh  lib.sh  preflight-selftest.sh  preflight.sh  verify.sh
(+16 files in other folders)
