[workspace]
resolver = "3"
members = ["crates/inferno-formats", "cli"]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/rahulmutt/inferno"

[workspace.dependencies]
inferno-formats = { path = "crates/inferno-formats" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
insta = { version = "1", features = ["yaml"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "deny"
