[workspace]
resolver = "3"
members = ["crates/inferno-formats", "crates/inferno-graph", "crates/inferno-runtime", "cli"]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/rahulmutt/inferno"

[workspace.dependencies]
inferno-formats = { path = "crates/inferno-formats" }
inferno-graph = { path = "crates/inferno-graph" }
inferno-runtime = { path = "crates/inferno-runtime" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
insta = { version = "1", features = ["yaml"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"
proptest = "1"
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }
fancy-regex = "0.16"

[workspace.lints.rust]
unsafe_code = "deny"
