[workspace]
resolver = "3"
members = ["crates/inferno-formats", "crates/inferno-graph", "crates/inferno-target", "crates/inferno-runtime", "crates/inferno-kernels", "crates/inferno-plan", "crates/inferno-codegen", "crates/inferno-core", "cli"]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/rahulmutt/inferno"

[workspace.dependencies]
inferno-formats = { path = "crates/inferno-formats" }
inferno-graph = { path = "crates/inferno-graph" }
inferno-target = { path = "crates/inferno-target" }
inferno-runtime = { path = "crates/inferno-runtime" }
inferno-kernels = { path = "crates/inferno-kernels" }
inferno-plan = { path = "crates/inferno-plan" }
inferno-codegen = { path = "crates/inferno-codegen" }
inferno-core = { path = "crates/inferno-core" }
inkwell = { version = "0.6", features = ["llvm18-1"] }
thiserror = "2"
sha2 = "0.10"
criterion = "0.7"
libloading = "0.9"
toml = "0.9"
rustix = { version = "1", default-features = false, features = ["param"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
insta = { version = "1", features = ["yaml"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"
proptest = "1"
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }
fancy-regex = "0.16"

[workspace.lints.rust]
unsafe_code = "deny"
