[package]
name = "inferno"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "inferno"
path = "src/main.rs"

[dependencies]
inferno-core.workspace = true
inferno-formats.workspace = true
inferno-graph.workspace = true
inferno-runtime.workspace = true
inferno-target.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
predicates.workspace = true
tempfile.workspace = true

[lints]
workspace = true
