[package]
name = "inferno"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "inferno"
path = "src/main.rs"

[dependencies]
inferno-core.workspace = true
inferno-kernels.workspace = true
inferno-pool.workspace = true
inferno-formats.workspace = true
inferno-graph.workspace = true
inferno-runtime.workspace = true
inferno-target.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
predicates.workspace = true
tempfile.workspace = true

[features]
pool-profile = ["inferno-pool/pool-profile"]
# M4b.14: prefill attn scores/softmax/output rdtsc sub-brackets, printed
# after the --profile op table. OFF by default (see inferno-kernels'
# attn-subprofile feature); only gate-prefill-attn-split.sh enables it.
attn-subprofile = ["inferno-kernels/attn-subprofile"]

[lints]
workspace = true
