[package]
name = "inferno-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
inferno-formats = { path = "../crates/inferno-formats" }

[[bin]]
name = "gguf_parse"
path = "fuzz_targets/gguf_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "safetensors_parse"
path = "fuzz_targets/safetensors_parse.rs"
test = false
doc = false
bench = false
