[package]
name = "inferno-plan"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
inferno-formats.workspace = true
inferno-graph.workspace = true
inferno-target.workspace = true
inferno-kernels.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
